--- a/frontend/src/container/Integrations/CloudIntegration/AzureServices/AzureServiceDetails/AzureServiceDetails.styles.scss
+++ b/frontend/src/container/Integrations/CloudIntegration/AzureServices/AzureServiceDetails/AzureServiceDetails.styles.scss
@@ -108,6 +108,15 @@
 					border-top: 1px solid var(--Slate-400, #1d212d);
 					background: var(--Ink-400, #121317);
 				}
+
+				.azure-service-details-overview-configuration-title-text-select-all {
+					color: var(--Vanilla-400, #c0c1c3);
+					font-family: Inter;
+					font-size: 12px;
+					font-style: normal;
+					font-weight: 400;
+					line-height: 18px; /* 138.462% */
+				}
 			}
 
 			.azure-service-details-actions {
@@ -151,6 +160,13 @@
 						flex-direction: column;
 						gap: 8px;
 						padding: 12px 16px 12px 16px;
+
+						&.azure-service-dashboard-item-clickable {
+							cursor: pointer;
+							&:hover {
+								background-color: var(--Slate-400, #1d212d);
+							}
+						}
 
 						.azure-service-dashboard-item-title {
 							color: var(--Vanilla-100, #f0f1f2);
